packages/typ/tests/fixtures/diagnostics/0057_core_if_branch_mismatch_05.ml.expected
File "0057_core_if_branch_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0057_core_if_branch_mismatch_05 is not a valid module name.

File "0057_core_if_branch_mismatch_05.ml", line 1, characters 28-33:
1 | let _ = if true then 4 else false
                                ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
