packages/typ/tests/fixtures/diagnostics/0057_core_if_branch_mismatch_05.ml
let _ = if true then 4 else false
